July 2009 2.7.0
  - log client IP at login attempt
  - added separate configuration option to enable/disable TLS encryption
  - Samba 3: allow to disable LM hashes (on by default) (RFE 2657140)
  - DHCP: added description field and reordered fixed IP input fields
  - fixed bugs:
    * added additional check for creating home directories (2798489)


08.04.2009 2.6.0
  - support NIS netgroups
  - support EDU person accounts (RFE 1413731)
  - Personal: support departmentNumber attribute
  - DHCP: allow file upload
  - added config option to search LAM login users in LDAP (RFE 2494249)
  - help messages are displayed as tooltips
  - LAM Pro:
   -> add businessCategory to self service (RFE 2494246)
   -> allow to customize page headers and use custom CSS styles


21.01.2009 2.5.0
  - LAM Pro:
   -> supports rfc2307bis schema for Unix groups (RFE 2111694)
   -> added alias manangement (object classes alias + uidObject) (RFE 1912779)
  - Shadow: module is now optional when creating new accounts
  - Kolab:
   -> account extension is now optional
   -> can be used without Unix module
   -> self service uses no extra LDAP suffix but uses global setting
  - DHCP:
   -> several bugfixes
   -> added PDF support
   -> support multiple Netbios name servers (RFE 2180179)
  - Samba 3:
   -> self service sets attribute "sambaPwdLastSet" on password change (LAM Pro)
   -> password timestamps can be updated on password reset page (LAM Pro)
   -> option to force password change on next login
   -> profile options for time when the user can/must change the password


15.10.2008 2.4.0
  - added DHCP management (donated by Siedl networks GmbH)
  - requires PHP 5.1.2
  - MHash dependendy replaced by Hash
  - save last selected server profile from login page
  - lamdaemon: allow to specify SSH port
  - lamdaemon: added Syslog logging
  - Unix: added profile options for lamdaemon
  - LAM Pro: password reset page is able to unlock Samba accounts and sets shadowLastChange
  - fixed bugs: