@@ -36,7 +36,9 @@ include_once('../../lib/config.inc');
 include_once('../../lib/status.inc');
 
 // start session
-session_save_path("../../sess");
+if (strtolower(session_module_name()) == 'files') {
+	session_save_path("../../sess");
+}
 @session_start();
 
 setlanguage();
